# vekamj

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  bot.py
app/cogs/: activity.py  base.py  core.py  fun.py  general.py  help.py  info.py  utility.py  welcome.py
app/core/: bot.py  config.py  logger.py
app/database/: __init__.py  mongodb.py  redis.py  redis_manager.py
app/utils/: embed_utils.py  status_rotator.py
docs/: conf.py  index.rst
